# cmd/portal/router.go
@@ -15,7 +15,10 @@ func NewRouter(cfg *config.Config, sr *service.Registry) *mux.Router {
 	router.PathPrefix("/swagger/").Handler(http.StripPrefix("/swagger/", http.FileServer(
 		http.Dir(cfg.Swagger.Path))))
 
+	// Add public routes
 	addPublicRoutes(router, *cfg, sr)
+
+	// Add admin routes
 	addAdminRoutes(router, *cfg, sr)
 	return router
 }
