# handler/request/common_validators.go
@@ -1,0 +1,18 @@
+package request
+
+import (
+	"github.com/nyaruka/phonenumbers"
+	"github.com/techx/portal/errors"
+)
+
+// IsValidPhoneNumber validates phone number using libphonenumber
+func IsValidPhoneNumber(phoneNumber string) error {
+	parsedNumber, err := phonenumbers.Parse(phoneNumber, "")
+	if err != nil {
+		return errors.ErrInvalidPhoneNumberFormat
+	}
+	if !phonenumbers.IsValidNumber(parsedNumber) {
+		return errors.ErrInvalidPhoneNumber
+	}
+	return nil
+}
