# handler/response/bulk_user_details_response.go
@@ -2,17 +2,17 @@ package response
 
 import (
 	"context"
-	"net/http"
 
 	"github.com/techx/portal/config"
 	"github.com/techx/portal/domain"
 )
 
+// swagger:model
 type BulkUserDetailsResponse struct {
 	Users []UserProfile `json:"users"`
 }
 
-func NewBulkUserDetailsResponse(_ context.Context, _ config.Config, user []domain.UserProfile) (BulkUserDetailsResponse, http.Header) {
+func NewBulkUserDetailsResponse(_ context.Context, _ config.Config, user []domain.UserProfile) (BulkUserDetailsResponse, HTTPMetadata) {
 	users := make([]UserProfile, 0, len(user))
 	for _, u := range user {
 		users = append(users, getUserProfile(u))
@@ -20,5 +20,5 @@ func NewBulkUserDetailsResponse(_ context.Context, _ config.Config, user []domai
 
 	return BulkUserDetailsResponse{
 		Users: users,
-	}, http.Header{}
+	}, HTTPMetadata{}
 }
